force-app/main/default/objects/Studentmaster__c/Studentmaster__c.object-meta.xml
<CustomObject>
    <label>Studentmaster</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Studentmasters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>