force-app/main/default/objects/Studentmaster__c/fields/averagemarks__c.field-meta.xml
<CustomField>
    <fullName>averagemarks__c</fullName>
    <formula>totalmarks__c / countmarksreords__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>averagemarks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>