force-app/main/default/objects/Studentmaster__c/fields/countmarksreords__c.field-meta.xml
<CustomField>
    <fullName>countmarksreords__c</fullName>
    <label>countmarksreords</label>
    <summaryForeignKey>Studentmarks__c.Studentmaster__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>