force-app/main/default/objects/Studentmaster__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descrption</label>
    <type>TextArea</type>
</CustomField>