force-app/main/default/objects/Studentmaster__c/fields/DOJ__c.field-meta.xml
<CustomField>
    <fullName>DOJ__c</fullName>
    <label>DOJ</label>
    <type>DateTime</type>
</CustomField>