force-app/main/default/objects/Studentmaster__c/fields/Studentemail__c.field-meta.xml
<CustomField>
    <fullName>Studentemail__c</fullName>
    <label>Studentemail</label>
    <type>Email</type>
</CustomField>